<resources>
    <string name="app_name">CalculIt</string>
    <string name="launch_a_game">Launch a game</string>
    <string name="calcul_it">Calcul It</string>
    <string name="default_number_value">0</string>
    <string name="label_answer">What is the answer ?</string>
    <string name="button_answer">OK go !</string>
    <string name="placeholder_answer">Answer</string>
    <string name="label_error_answer">Error: Wrong format</string>
    <string name="difficulty">Difficulty</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_god">God</string>
    <string name="timeToPrint_easy">1s</string>
    <string name="timeToPrint_medium">0.8s</string>
    <string name="timeToPrint_hard">0.6s</string>
    <string name="timeToPrint_god">0.5s</string>
    <string name="label_correct_answer">Correct !</string>
    <string name="label_wrong_answer">Wrong !</string>
    <string name="label_your_answer">Your answer :</string>
    <string name="label_tv_correct_answer_result">The correct answer :</string>
    <string name="tv_correct_answer_response">Correct Num</string>
    <string name="tv_your_answer_response">your answer</string>
    <string name="button_back_home">Back to Home</string>
    <string name="button_next_level">Next level</string>
    <string name="difficulty">Difficulty</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_god">God</string>
    <string name="timeToPrint_easy">1s</string>
    <string name="timeToPrint_medium">0.8s</string>
    <string name="timeToPrint_hard">0.6s</string>
    <string name="timeToPrint_god">0.5s</string>
    <string name="label_correct_answer">Correct !</string>
    <string name="label_wrong_answer">Wrong !</string>
    <string name="label_your_answer">Your answer :</string>
    <string name="label_tv_correct_answer_result">The correct answer :</string>
    <string name="tv_correct_answer_response">Correct Num</string>
    <string name="tv_your_answer_response">your answer</string>
    <string name="button_back_home">Back to Home</string>
    <string name="button_next_level">Next level</string>
</resources>
