<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.erwanlbp.calculit.activity.DifficultyActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_difficulty"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_weight="12"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/toolbar_elevation"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_difficulty">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="12" />

        <Button
            android:id="@id/btnDifficultyEasy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_easy" />

        <TextView
            android:id="@id/tvEasy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="top|center"
            android:text="@string/timeToPrint_easy"
            android:textStyle="italic" />

        <Button
            android:id="@id/btnDifficultyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_medium" />

        <TextView
            android:id="@id/tvMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="top|center"
            android:text="@string/timeToPrint_medium"
            android:textStyle="italic" />

        <Button
            android:id="@id/btnDifficultyHard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/difficulty_hard" />

        <TextView
            android:id="@id/tvHard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="top|center"
            android:text="@string/timeToPrint_hard"
            android:textStyle="italic" />

        <Button
            android:id="@id/btnDifficultyGod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_god" />

        <TextView
            android:id="@id/tvGod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="12"
            android:gravity="top|center"
            android:text="@string/timeToPrint_god"
            android:textStyle="italic" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>