<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.erwanlbp.calculit.activity.PrintResultsActivity">

    <Button
        android:id="@+id/button_print_result_back_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_row="4"
        android:onClick="backHome"
        android:text="@string/button_back_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tvCorrectAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_row="2"
        android:text="@string/tv_correct_answer_response"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelCorrectAnswer" />

    <Button
        android:id="@+id/button_print_results_next_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_row="4"
        android:onClick="nextLevel"
        android:text="@string/button_next_level"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tvLabelYourAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="6dp"
        android:layout_row="1"
        android:text="@string/label_your_answer"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultAnswer" />

    <TextView
        android:id="@+id/tvResultAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginBottom="8dp"
        android:layout_row="0"
        android:text="@string/label_correct_answer"
        android:textSize="36sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tvYourAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="7dp"
        android:layout_row="2"
        android:text="@string/tv_your_answer_response"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelYourAnswer" />

    <TextView
        android:id="@+id/tvLabelCorrectAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_marginRight="8dp"
        android:layout_marginTop="-1dp"
        android:layout_row="1"
        android:text="@string/label_tv_correct_answer_result"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultAnswer" />

    <TextView
        android:id="@+id/tvPrintResultLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_level"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPrintResultLevelValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="lvlValue"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/tvPrintResultLevel"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
